# dscp

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
ai/evaluation/: plot_predictions.py
ai/models/: experiment_runner.py  geo_model.joblib  geo_model.py  linear_model.joblib  predictor.py  save_model.py  train_geo_model.py
ai/preprocessing/: features.py  prepare_geo_pm25.py  prepare_pm25.py  timeseries_utils.py
backend/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/dependencies/: auth.py
backend/app/api/v1/endpoints/: predict.py  predict_geo.py
backend/app/api/v1/schemas/: predict.py  predict_geo.py
backend/app/core/: config.py  logger.py
backend/tests/: test_predict.py  test_predict_geo.py
docs/: 01_linreg_baseline.docx.docx  02_xgb_improved_accuracy.docx  03_rf_forecast_accuracy.docx  04_api_deployment.docx  05_testing_validation.docx  06_dockerization.docx  07_api_authentication.docx  08_logging_monitoring.docx  09_deployment_render.docx  10_geo_model_training.docx
notebooks/: air_data_viz.ipynb
