[project]
name = "dscp"
version = "0.1.0"
description = ""
authors = [
    {name = "samiribrh"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-dotenv (>=1.1.0,<2.0.0)"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
xgboost = ">=3.0.1,<4.0.0"
matplotlib = ">=3.10.3,<4.0.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
flake8 = "^7.2.0"
